test/libsolidity/syntaxTests/constructor/library_constructor_old.sol
library Lib {
	function Lib() public;
}
// ----
// SyntaxError: (15-37): Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use "constructor(...) { ... }" to define it.
// TypeError: (15-37): Constructor cannot be defined in libraries.
// TypeError: (15-37): Constructor must be implemented if declared.
